# kfastcrypto

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: rust.yml
kotlin/lib/: build.gradle.kts
kotlin/lib/src/androidMain/: AndroidManifest.xml
kotlin/lib/src/commonMain/kotlin/xyz.mcxross.kfastcrypto/: Crypto.kt  CryptoApi.kt  Ecvrf.kt  Encode.kt  FastCrypto.kt  KFC.kt  Kfc.kt  Loader.kt  Rust.kt  Sigs.kt
kotlin/lib/src/commonMain/kotlin/xyz.mcxross.kfastcrypto/model/: Keypair.kt  Proof.kt  SignatureScheme.kt
kotlin/lib/src/commonMain/kotlin/xyz.mcxross.ktfastcrypto/: CryptoApi.kt  FastCrypto.kt  Loader.kt  Rust.kt
kotlin/sample/: build.gradle.kts
kotlin/sample/js/: build.gradle.kts
kotlin/sample/js/src/main/kotlin/xyz.mcxross.kfastcrypto/: Main.kt
kotlin/sample/js/src/main/res/: index.html
kotlin/sample/jvm/: build.gradle.kts
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/core/src/ecvrf/: mod.rs
rust/core/src/encode/: mod.rs
rust/core/src/model/: mod.rs
rust/core/src/sigs/: mod.rs
rust/native/: Cargo.toml
rust/native/src/: lib.rs
rust/native/src/ecvrf/: key.rs  mod.rs  proof.rs  verify.rs
rust/native/src/encode/: format.rs  mod.rs
rust/native/src/jwt/: mod.rs
rust/native/src/model/: key.rs  mod.rs  proof.rs  scheme.rs  sign.rs
rust/native/src/sigs/: key.rs  mod.rs  sig_scheme.rs  sign.rs  verify.rs
rust/src/: lib.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
rust/wasm/src/ecvrf/: mod.rs
(+31 files in other folders)
