[package]
name = "wasm"
version = "0.1.0"
authors = ["@a <28899947+astinz@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
fastcrypto.workspace = true
wasm-bindgen = "0.2.63"
rand = "0.8.5"
hex = "0.4.3"
bincode = "1.3.3"
getrandom = { version = "0.2.8", features = ["js"] }
cc = "1.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
